all pages updated
pushing to test meta images

--- a/bonfire.html
+++ b/bonfire.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Bonfire Interactive, a Euna Solutions Brand" />
   <meta property="og:url" content="https://www.hannahhatherell.com/bonfire.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/bonfire.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-bon.png" />
 
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -109,6 +109,14 @@
     </div>
   </section>
 
+  <section class="pb-5">
+    <div class="container center">
+      <div class="pb-2">
+        <img class="img-fluid" src="img/euna/bonfire-1.png">
+        <p class="pt-2 text-center caption">Cover Design</p>
+      </div>
+    </div>
+  </section>
 
   <div class="text-center pt-3">
     <img class="img-fluid" src="img/euna/sops-2.png">
@@ -147,7 +155,7 @@
 
   <section class="mx-auto pb-5 mb-5 bg-lt-blue">
 
-    <div class="col-lg-8 mx-auto pt-4">
+    <div class="col-lg-8 mx-auto pt-5">
       <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
@@ -197,14 +205,14 @@
           <div class="pb-4">
             <a href="euna.html"><img class="img-fluid project" src="img/euna-2.png"></a>
           </div>
-          <p class="project-sub">Design. Creative. Brand.</p>
+          <p class="project-sub">Design. Digital. Print. Brand.</p>
           <h5 class="project-title">Euna Solutions</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
             <a href="questica.html"><img class="img-fluid project" src="img/questica.jpg"></a>
           </div>
-          <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+          <p class="project-sub">Design. Marketing Collateral. Print. Digital.</p>
           <h5 class="project-title">Questica & eCivis</h5>
         </div>
       </div>
