--- a/csp.html
+++ b/csp.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Canadian Science Publishing" />
   <meta property="og:url" content="https://www.hannahhatherell.com/csp.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/csp.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-csp.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -191,7 +191,7 @@
         <img class="img-fluid" src="img/csp/csp-oa.png">
       </div>
     </div>
-    <p class="center text-center caption pb-5 pt-1">Custom illustrations created to elevate visual identity and selling points.</p>
+    <p class="center text-center caption pb-2 pt-1">Custom illustrations created to elevate visual identity and selling points.</p>
   </div>
 </section>
 
@@ -288,14 +288,14 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
+            <a href="nng.html"><img class="img-fluid project" src="img/nng.jpg"></a>
           </div>
-          <p class="project-sub">Book Cover. Visual System. Design Thinking.</p>
+          <p class="project-sub">Visual System. Design Thinking. Process.</p>
           <h5 class="project-title">Nielsen Norman Group</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr-1.png"></a>
+            <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.jpg"></a>
           </div>
           <p class="project-sub">UX. UI. Virtual Reality.</p>
           <h5 class="project-title">MasterpieceVR</h5>
