--- a/euna.html
+++ b/euna.html
@@ -242,14 +242,14 @@
           <div class="pb-4">
             <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.jpg"></a>
           </div>
-          <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
+          <p class="project-sub">Design. Campaign Creative. Data Visuals. Layout.</p>
           <h5 class="project-title">Bonfire Interactive</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
             <a href="questica.html"><img class="img-fluid project" src="img/questica.jpg"></a>
           </div>
-          <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+          <p class="project-sub">Design. Marketing Collateral. Print. Digital.</p>
           <h5 class="project-title">Questica & eCivis</h5>
         </div>
       </div>
