--- a/hhi.html
+++ b/hhi.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Half Halt Illustrations" />
   <meta property="og:url" content="https://www.hannahhatherell.com/hhi.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/hhi.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-hhi.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -78,91 +78,86 @@
     </div>
   </nav>
 
-<section class="pl-4 pr-4">
-  <div class="center pt-3">
-    <div class="row pt-5">
-      <div class="col-sm-6">
-        <div class="hhi pt-5 pb-2">
-          <img class="img-fluid" src="img/halfhalt/hhi-brand.png" alt="">
-        </div>
-        <h2 style="font-size: 36px;">Half Halt Illustrations</h2>
-        <p style="font-size: 14px; font-weight: 400;">My Passion Project (2020-2023)</p>
-        <p class="pb-3">I started Half Halt Illustrations in March 2020 as a way to fuel my creative inspiration during the first pandemic lockdown in Ontario. As an active equestrian and horse owner, Half Halt Illustrations combined my passion for creativity and love
-          of the equestrian sport.</p>
+
+  <section class="pt-5 mt-3">
+    <div class="container center pb-4 mt-5">
+      <div class="pb-2">
+        <img class="w-25 col-sm-1 pl-0 pr-0 pb-2" src="img/halfhalt/logo.jpg" alt="">
+        <h2 style="font-size: 20px; font-weight: 600">Half Halt Illustrations — Passion Project (2020-2023)</h2>
       </div>
-      <div class="col-sm-6 pt-4">
-        <img class="img-fluid" src="img/halfhalt/hhi.png" alt="">
+      <div>
+
+        <p class="pb-3">I started Half Halt Illustrations (HHI) in March 2020 as a way to fuel my creative inspiration during the first pandemic lockdown in Ontario. As an active equestrian and horse owner, Half Halt Illustrations combined my passion for creativity and love of the equestrian sport. Below is a selection of logo design and digital art made for Half Halt Illustrations clients.</p>
+    </div>
+
+    <div class="container pt-0 center">
+      <div class="row pt-0">
+        <div class="col-sm-6 pt-5 pb-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-logos-1.png">
+        </div>
+        <div class="col-sm-6 pt-5 pb-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-logos-2.png">
+        </div>
+        <div class="col-sm-6">
+          <img class="img-fluid" src="img/halfhalt/hhi-1.jpg">
+        </div>
+        <div class="col-sm-6">
+          <img class="img-fluid" src="img/halfhalt/hhi-2.jpg">
+        </div>
+        <div class="w-100"></div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-3.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-4.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-5.jpg">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-6.jpg">
+        </div>
+        <div class="col-sm-6 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-7.jpg">
+        </div>
+        <div class="w-100"></div>
+        <div class="col-sm-6 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-8.jpg">
+        </div>
+        <div class="col-sm-6 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-9.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-10.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-11.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-12.jpg">
+        </div>
+        <div class="col-sm-6 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-18.jpg">
+        </div>
+        <div class="col-sm-6 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-19.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-20.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-21.jpg">
+        </div>
+        <div class="col-sm-4 pt-3">
+          <img class="img-fluid" src="img/halfhalt/hhi-22.jpg">
+        </div>
       </div>
     </div>
-  </div>
   </section>
 
-  <div class="container pt-0 center">
-    <div class="row pt-0">
-      <div class="col-sm-6">
-        <img class="img-fluid" src="img/halfhalt/hhi-1.jpg">
-      </div>
-      <div class="col-sm-6">
-        <img class="img-fluid" src="img/halfhalt/hhi-2.jpg">
-      </div>
-      <div class="col-sm-6 pt-5">
-        <img class="img-fluid" src="img/halfhalt/hhi-logos-1.png">
-      </div>
-      <div class="col-sm-6 pt-5">
-        <img class="img-fluid" src="img/halfhalt/hhi-logos-3.png">
-      </div>
-      <div class="w-100"></div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-3.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-4.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-5.jpg">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-6.jpg">
-      </div>
-      <div class="col-sm-6 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-7.jpg">
-      </div>
-      <div class="w-100"></div>
-      <div class="col-sm-6 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-8.jpg">
-      </div>
-      <div class="col-sm-6 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-9.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-10.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-11.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-12.jpg">
-      </div>
-      <div class="col-sm-6 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-18.jpg">
-      </div>
-      <div class="col-sm-6 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-19.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-20.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-21.jpg">
-      </div>
-      <div class="col-sm-4 pt-3">
-        <img class="img-fluid" src="img/halfhalt/hhi-22.jpg">
-      </div>
-    </div>
-  </div>
 
   <section class="pb-4 pt-5">
       <ul class="scope-list center">
@@ -178,7 +173,7 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="canopy.html"><img class="img-fluid project" src="img/canopy-1.png"></a>
+            <a href="canopy.html"><img class="img-fluid project" src="img/canopy.jpg"></a>
           </div>
           <p class="project-sub">Photography. eCommerce. Production.</p>
           <h5 class="project-title">Canopy Growth Corporation</h5>
