--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
         <a class="d-block mx-auto mb-4" href="euna.html">
         <img class="img-fluid project" src="img/euna-2.png">
       </a>
-        <p class="project-sub">Design. Creative. Brand.</p>
+        <p class="project-sub">Design. Digital. Print. Brand.</p>
         <h5 class="project-title">Euna Solutions</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="bonfire.html">
         <img class="img-fluid project" src="img/bonfire.jpg">
       </a>
-        <p class="project-sub">Campaign Creative. Data Visuals. Layout.</p>
+        <p class="project-sub">Design. Campaign Creative. Data Visuals. Layout.</p>
         <h5 class="project-title">Bonfire Interactive</h5>
       </div>
       <div class="w-100"></div>
@@ -147,14 +147,14 @@
         <a class="d-block mx-auto mb-4" href="questica.html">
       <img class="img-fluid project" src="img/questica.jpg">
     </a>
-        <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+        <p class="project-sub">Design. Marketing Collateral. Print. Digital.</p>
         <h5 class="project-title">Questica & eCivis</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="nng.html">
-        <img class="img-fluid project" src="img/nng-1.png">
+        <img class="img-fluid project" src="img/nng.jpg">
       </a>
-        <p class="project-sub">Book Cover. Visual System. Design Thinking.</p>
+        <p class="project-sub">Visual System. Design Thinking. Process.</p>
         <h5 class="project-title">Nielsen Norman Group</h5>
       </div>
     </div>
@@ -162,14 +162,14 @@
     <div class="row pb-3">
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="csp.html">
-        <img class="img-fluid project" src="img/csp-1.png">
+        <img class="img-fluid project" src="img/csp.jpg">
       </a>
-        <p class="project-sub">Brand. Frontend. Production.</p>
+        <p class="project-sub">UX. Brand. Web. Print.</p>
         <h5 class="project-title">Canadian Science Publishing</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
-        <img class="img-fluid project" src="img/mpvr-1.png">
+        <img class="img-fluid project" src="img/mpvr.jpg">
       </a>
         <p class="project-sub">UX. UI. Virtual Reality.</p>
         <h5 class="project-title">MasterpieceVR</h5>
@@ -177,14 +177,14 @@
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="cmg.html">
-        <img class="img-fluid project" src="img/cmg-1.png">
+        <img class="img-fluid project" src="img/cmg.jpg">
       </a>
         <p class="project-sub">Magazines. Design. Process.</p>
         <h5 class="project-title">Coyle Media Group</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="canopy.html">
-        <img class="img-fluid project" src="img/canopy-1.png">
+        <img class="img-fluid project" src="img/canopy.jpg">
       </a>
         <p class="project-sub">Photography. eCommerce. Production.</p>
         <h5 class="project-title">Canopy Growth Corporation</h5>
@@ -192,7 +192,7 @@
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="hhi.html">
-          <img class="img-fluid project" src="img/hhi-1.png">
+          <img class="img-fluid project" src="img/hhi.jpg">
         </a>
         <p class="project-sub">Artwork. Brand. Passion Project.</p>
         <h5 class="project-title">Half Halt Illustrations</h5>
