--- a/questica.html
+++ b/questica.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Questica, a Euna Solutions Brand" />
   <meta property="og:url" content="https://www.hannahhatherell.com/questica.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/questica.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-que.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -106,7 +106,7 @@
   <section class="pt-5 mt-3 pb-3">
     <div class="container center mt-5">
       <div class="pb-2">
-        <img class="w-50 col-sm-6 pl-0 pr-0 pb-3" src="img/euna/logo-qe.jpg" alt="">
+        <img class="w-75 col-sm-6 pl-0 pr-0 pb-3" src="img/euna/logo-qe.jpg" alt="">
         <h2 style="font-size: 20px; font-weight: 600">Questica Budget and eCivis Grants Management Software</h2>
       </div>
       <div>
@@ -223,14 +223,14 @@
           <div class="pb-4">
             <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.jpg"></a>
           </div>
-          <p class="project-sub">Campaign Creative. Design. Data Visuals.</p>
+          <p class="project-sub">Design. Campaign Creative. Data Visuals. Layout.</p>
           <h5 class="project-title">Bonfire Interactive</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
+            <a href="nng.html"><img class="img-fluid project" src="img/nng.jpg"></a>
           </div>
-          <p class="project-sub">Book Cover. Visual System. Design Thinking.</p>
+          <p class="project-sub">Visual System. Design Thinking. Process.</p>
           <h5 class="project-title">Nielsen Norman Group</h5>
         </div>
       </div>
