--- a/canopy.html
+++ b/canopy.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Canopy Growth Corporation" />
   <meta property="og:url" content="https://www.hannahhatherell.com/canopy.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/canopy.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-can.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -115,6 +115,7 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div class="pb-2">
+        <img class="w-75 col-sm-6 pl-0 pr-0 pb-3" src="img/canopy/logo.jpg" alt="">
         <h2 style="font-size: 20px; font-weight: 600">Canopy Growth Corporation</h2>
       </div>
       <div>
@@ -149,14 +150,14 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="cmg.html"><img class="img-fluid project" src="img/cmg-1.png"></a>
+            <a href="cmg.html"><img class="img-fluid project" src="img/cmg.jpg"></a>
           </div>
           <p class="project-sub">Magazines. Design. Process.</p>
           <h5 class="project-title">Coyle Media Group</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="hhi.html"><img class="img-fluid project hhi-border" src="img/hhi-1.png"></a>
+            <a href="hhi.html"><img class="img-fluid project" src="img/hhi.jpg"></a>
           </div>
           <p class="project-sub">Artwork. Brand. Passion Project.</p>
           <h5 class="project-title">Half Halt Illustrations</h5>
