--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="MasterpieceVR (Masterpiece Studio)" />
   <meta property="og:url" content="https://www.hannahhatherell.com/masterpiece-vr.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/mpvr.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-mas.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -92,6 +92,7 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div class="pb-2">
+        <img class="w-50 col-sm-3 pl-0 pr-0 pb-3" src="img/mpvr/logo.png" alt="">
         <h2 style="font-size: 20px; font-weight: 600">MasterpieceVR (Masterpiece Studio)</h2>
       </div>
       <div>
@@ -234,14 +235,14 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="csp.html"><img class="img-fluid project" src="img/csp-1.png"></a>
+            <a href="csp.html"><img class="img-fluid project" src="img/csp.jpg"></a>
           </div>
-          <p class="project-sub">UX. Frontend. Illustration.</p>
+          <p class="project-sub">UX. Brand. Web. Print.</p>
           <h5 class="project-title">Canadian Science Publishing</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="cmg.html"><img class="img-fluid project" src="img/cmg-1.png"></a>
+            <a href="cmg.html"><img class="img-fluid project" src="img/cmg.jpg"></a>
           </div>
           <p class="project-sub">Magazines. Design. Process.</p>
           <h5 class="project-title">Coyle Media Group</h5>
