--- a/nng.html
+++ b/nng.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Nielsen Norman Group" />
   <meta property="og:url" content="https://www.hannahhatherell.com/nng.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/nng.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-nng.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -113,6 +113,7 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div>
+        <img class="w-25 col-sm-1 pl-0 pr-0 pb-1" src="img/nng/logo.jpg" alt="">
         <h2 style="font-size: 20px; font-weight: 600">Neilsen Norman Group</h2>
         <p>Book Cover Design + Visual System (Design Thinking Process)</p>
         <div class="bb"></div>
@@ -188,14 +189,14 @@
           <div class="pb-4">
             <a href="questica.html"><img class="img-fluid project" src="img/questica.jpg"></a>
           </div>
-          <p class="project-sub">Marketing Collateral. Campaign Creative.</p>
+          <p class="project-sub">Design. Marketing Collateral. Print. Digital.</p>
           <h5 class="project-title">Questica & eCivis</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="csp.html"><img class="img-fluid project" src="img/csp-1.png"></a>
+            <a href="csp.html"><img class="img-fluid project" src="img/csp.jpg"></a>
           </div>
-          <p class="project-sub">Brand. Frontend. Production.</p>
+          <p class="project-sub">UX. Brand. Web. Print.</p>
           <h5 class="project-title">Canadian Science Publishing</h5>
         </div>
       </div>
