--- a/cmg.html
+++ b/cmg.html
@@ -109,7 +109,7 @@
           <p class="center pb-5 pt-4 text-center caption">Luxe Fall Spread Example</p>
       <img class="img-fluid" src="img/cmg/luxe-spring.jpg" alt="">
           <p class="center pb-5 pt-4 text-center caption">Luxe Spring Layout Samples</p>
-      <img class="img-fluid" src="img/cmg/luxe-Spring-1.jpg" alt="">
+      <img class="img-fluid" src="img/cmg/luxe-spring-1.jpg" alt="">
           <p class="center pb-2 pt-4 text-center caption">Luxe Spring Spread Example</p>
     </div>
   </section>
