--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who is enthusiastic about solving complex problems with design solutions." />
+  <meta property="og:description" content="Hi, I'm Hannah 👋 an experienced designer with creative and technical expertise. I enjoy solving complex problems with design solutions." />
   <meta property="og:url" content="https://www.hannahhatherell.com/index.html" />
   <meta property="og:image" content="https://www.hannahhatherell.com/home.png" />
 
