--- a/bonfire.html
+++ b/bonfire.html
@@ -57,11 +57,11 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
-              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="freelance.html">Freelance</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
               <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
@@ -205,14 +205,14 @@
           <div class="pb-4">
             <a href="euna.html"><img class="img-fluid project" src="img/euna-2.png"></a>
           </div>
-          <p class="project-sub">Design. Digital. Print. Brand.</p>
+          <p class="project-sub">Brand. Creative. Marketing.</p>
           <h5 class="project-title">Euna Solutions</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
             <a href="questica.html"><img class="img-fluid project" src="img/questica.jpg"></a>
           </div>
-          <p class="project-sub">Design. Marketing Collateral. Print. Digital.</p>
+          <p class="project-sub">Marketing. Creative. Print. Digital.</p>
           <h5 class="project-title">Questica & eCivis</h5>
         </div>
       </div>
