--- a/freelance.html
+++ b/freelance.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Freelance" />
   <meta property="og:url" content="https://www.hannahhatherell.com/freelance.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/meta-csp.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/meta-fl.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -56,11 +56,11 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
-              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="freelance.html">Freelance</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
               <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
@@ -88,12 +88,14 @@
 
   <section class="pb-3">
     <div class="container center">
+      <img class="img-fluid" src="img/freelance/kate-logo.png" alt="">
+      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT — Logo & Brand Design</p>
       <img class="img-fluid" src="img/freelance/bis-card.jpg" alt="">
-      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT — Logo & Brand Design – Business Card</p>
+      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT – Business Card</p>
       <img class="img-fluid" src="img/freelance/oil-bottle.jpg" alt="">
-      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT — Logo & Brand Design – Essential Oils</p>
-      <img class="img-fluid" src="img/freelance/notebook.jpg" alt="">
-      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT — Logo & Brand Design – Notebook</p>
+      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT – Essential Oils</p>
+      <img class="img-fluid" src="img/freelance/notebook-1.jpg" alt="">
+      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT – Notebook</p>
 
     </div>
   </section>
@@ -112,17 +114,17 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="nng.html"><img class="img-fluid project" src="img/nng.jpg"></a>
-          </div>
-          <p class="project-sub">Visual System. Design Thinking. Process.</p>
-          <h5 class="project-title">Nielsen Norman Group</h5>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <div class="pb-4">
             <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.jpg"></a>
           </div>
           <p class="project-sub">UX. UI. Virtual Reality.</p>
           <h5 class="project-title">MasterpieceVR</h5>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="hhi.html"><img class="img-fluid project" src="img/hhi.jpg"></a>
+          </div>
+          <p class="project-sub">Artwork. Brand. Passion Project.</p>
+          <h5 class="project-title">Half Halt Illustrations</h5>
         </div>
       </div>
     </div>
