--- a/hhi.html
+++ b/hhi.html
@@ -56,11 +56,11 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
-              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="freelance.html">Freelance</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
               <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
@@ -173,10 +173,10 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="canopy.html"><img class="img-fluid project" src="img/canopy.jpg"></a>
+            <a href="freelance.html"><img class="img-fluid project" src="img/ks-2.jpg"></a>
           </div>
-          <p class="project-sub">Photography. eCommerce. Production.</p>
-          <h5 class="project-title">Canopy Growth Corporation</h5>
+          <p class="project-sub">Branding. Logo Design. Local.</p>
+          <h5 class="project-title">Freelance</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
