--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
-              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="freelance.html">Freelance</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
               <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
@@ -132,14 +132,14 @@
         <a class="d-block mx-auto mb-4" href="euna.html">
         <img class="img-fluid project" src="img/euna-2.png">
       </a>
-        <p class="project-sub">Design. Digital. Print. Brand.</p>
+        <p class="project-sub">Brand. Creative. Marketing.</p>
         <h5 class="project-title">Euna Solutions</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="bonfire.html">
         <img class="img-fluid project" src="img/bonfire.jpg">
       </a>
-        <p class="project-sub">Design. Campaign Creative. Data Visuals. Layout.</p>
+        <p class="project-sub">Campaign Creative. Data Visuals. Layout.</p>
         <h5 class="project-title">Bonfire Interactive</h5>
       </div>
       <div class="w-100"></div>
@@ -147,19 +147,9 @@
         <a class="d-block mx-auto mb-4" href="questica.html">
       <img class="img-fluid project" src="img/questica.jpg">
     </a>
-        <p class="project-sub">Design. Marketing Collateral. Print. Digital.</p>
+        <p class="project-sub">Marketing. Creative. Print. Digital.</p>
         <h5 class="project-title">Questica & eCivis</h5>
       </div>
-      <div class="col-sm-6">
-        <a class="d-block mx-auto mb-4" href="nng.html">
-        <img class="img-fluid project" src="img/nng.jpg">
-      </a>
-        <p class="project-sub">Visual System. Design Thinking. Process.</p>
-        <h5 class="project-title">Nielsen Norman Group</h5>
-      </div>
-    </div>
-
-    <div class="row pb-3">
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="csp.html">
         <img class="img-fluid project" src="img/csp.jpg">
@@ -167,14 +157,15 @@
         <p class="project-sub">UX. Brand. Web. Print.</p>
         <h5 class="project-title">Canadian Science Publishing</h5>
       </div>
+    </div>
+    <div class="row pb-3">
       <div class="col-sm-6">
-        <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
-        <img class="img-fluid project" src="img/mpvr.jpg">
+        <a class="d-block mx-auto mb-4" href="canopy.html">
+        <img class="img-fluid project" src="img/canopy.jpg">
       </a>
-        <p class="project-sub">UX. UI. Virtual Reality.</p>
-        <h5 class="project-title">MasterpieceVR</h5>
+        <p class="project-sub">Photography. eCommerce. Production.</p>
+        <h5 class="project-title">Canopy Growth Corporation</h5>
       </div>
-      <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="cmg.html">
         <img class="img-fluid project" src="img/cmg.jpg">
@@ -182,12 +173,20 @@
         <p class="project-sub">Magazines. Design. Process.</p>
         <h5 class="project-title">Coyle Media Group</h5>
       </div>
+      <div class="w-100"></div>
       <div class="col-sm-6">
-        <a class="d-block mx-auto mb-4" href="canopy.html">
-        <img class="img-fluid project" src="img/canopy.jpg">
+        <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
+        <img class="img-fluid project" src="img/mpvr.jpg">
       </a>
-        <p class="project-sub">Photography. eCommerce. Production.</p>
-        <h5 class="project-title">Canopy Growth Corporation</h5>
+        <p class="project-sub">UX. UI. Virtual Reality.</p>
+        <h5 class="project-title">MasterpieceVR</h5>
+      </div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="freelance.html">
+        <img class="img-fluid project" src="img/ks-2.jpg">
+      </a>
+        <p class="project-sub">Branding. Logo Design. Local.</p>
+        <h5 class="project-title">Freelance</h5>
       </div>
       <div class="w-100"></div>
       <div class="col-sm-6">
@@ -201,7 +200,7 @@
         <a class="d-block mx-auto mb-4" href="various.html">
           <img class="img-fluid project" src="img/various-1.png">
         </a>
-        <p class="project-sub">Code. Motion. Design. Illustration.</p>
+        <p class="project-sub">Code. Design. Illustration.</p>
         <h5 class="project-title">Various Works</h5>
       </div>
     </div>
