--- a/canopy.html
+++ b/canopy.html
@@ -56,11 +56,11 @@
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica & eCivis</a>
-              <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
-              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
+              <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
+              <a class="dropdown-item nav-item" href="freelance.html">Freelance</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
               <a class="dropdown-item nav-item" href="various.html">Various Works</a>
             </div>
@@ -150,17 +150,17 @@
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="cmg.html"><img class="img-fluid project" src="img/cmg.jpg"></a>
+            <a href="canopy.html"><img class="img-fluid project" src="img/canopy.jpg"></a>
           </div>
-          <p class="project-sub">Magazines. Design. Process.</p>
-          <h5 class="project-title">Coyle Media Group</h5>
+          <p class="project-sub">Photography. eCommerce. Production.</p>
+          <h5 class="project-title">Canopy Growth Corporation</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
           <div class="pb-4">
-            <a href="hhi.html"><img class="img-fluid project" src="img/hhi.jpg"></a>
+            <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.jpg"></a>
           </div>
-          <p class="project-sub">Artwork. Brand. Passion Project.</p>
-          <h5 class="project-title">Half Halt Illustrations</h5>
+          <p class="project-sub">UX. UI. Virtual Reality.</p>
+          <h5 class="project-title">MasterpieceVR</h5>
         </div>
       </div>
     </div>
