--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
   </section>
 
-  <div class="container pb-3">
+  <div class="container pr-3 pl-3 pb-3">
     <div class="row pt-4">
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="euna.html">
