--- a/freelance.html
+++ b/freelance.html
@@ -89,13 +89,13 @@
   <section class="pb-3">
     <div class="container center">
       <img class="img-fluid" src="img/freelance/kate-logo.png" alt="">
-      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT — Logo & Brand Design</p>
+      <p class="center text-center pb-5 pt-3 caption">Registered Massage Therapist — Logo & Brand Design</p>
       <img class="img-fluid" src="img/freelance/bis-card.jpg" alt="">
-      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT – Business Card</p>
+      <p class="center text-center pb-5 pt-3 caption">Business Card</p>
       <img class="img-fluid" src="img/freelance/oil-bottle.jpg" alt="">
-      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT – Essential Oils</p>
+      <p class="center text-center pb-5 pt-3 caption">Essential Oils</p>
       <img class="img-fluid" src="img/freelance/notebook-1.jpg" alt="">
-      <p class="center text-center pb-5 pt-3 caption">Kate Sonneveld, RMT – Notebook</p>
+      <p class="center text-center pb-5 pt-3 caption">Notebook</p>
 
     </div>
   </section>
