--- a/cmg.html
+++ b/cmg.html
@@ -11,7 +11,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>Hannah Hatherell</title>
+  <title>HH | Coyle Media Group</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -102,7 +102,11 @@
             <p class="center pb-5 pt-4 text-center caption">CMG Brand Guidelines (above)</p>
     </div>
 
-    <div class="container center">
+<div class="bb"></div>
+
+    <div class="container center pt-5">
+      <img class="w-25 col-sm-2 pl-0 pr-0 pb-3" src="img/cmg/luxe-logo.png" alt="">
+      <p>The below images showcase some of my layout and design work for <em>Luxe</em>, a high-end luxury lifestyle magazine marketed to the Ottawa area.</p>
       <img class="img-fluid" src="img/cmg/luxe-fall.jpg" alt="">
           <p class="center pb-5 pt-4 text-center caption">Luxe Fall Layout Samples</p>
       <img class="img-fluid" src="img/cmg/luxe-fall-1.jpg" alt="">
@@ -113,6 +117,18 @@
           <p class="center pb-2 pt-4 text-center caption">Luxe Spring Spread Example</p>
     </div>
   </section>
+
+<div class="bb"></div>
+
+  <div class="container center pt-5">
+    <img class="w-25 col-sm-2 pl-0 pr-0 pb-3" src="img/cmg/owm-logo.png" alt="">
+    <p><span style="font-weight: 500;">The below images showcase my redesign of</span> <span style="font-weight: 500; font-style: italic;">Ottawa Wedding</span>, a must-have wedding guide marketed to Ottawa's brides-to-be.</p>
+    <img class="img-fluid" src="img/cmg/owm-2.jpg" alt="">
+        <p class="center pb-5 pt-4 text-center caption">Ottawa Wedding Autumn Layout Samples</p>
+    <img class="img-fluid" src="img/cmg/owm-1.jpg" alt="">
+        <p class="center pb-5 pt-4 text-center caption">Ottawa Wedding Spread Example</p>
+  </div>
+</section>
 
 <!--  <section class="mx-auto cmg-mobile">
     <div class="col-sm-6 mx-auto pb-0">
