--- a/bonfire.html
+++ b/bonfire.html
@@ -12,7 +12,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>Hannah Hatherell</title>
+  <title>HH | Bonfire Interactive</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
