--- a/hhi.html
+++ b/hhi.html
@@ -11,7 +11,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>Hannah Hatherell</title>
+  <title>HH | Half Halt Illustrations</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
