--- a/testimonials.html
+++ b/testimonials.html
@@ -13,7 +13,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>Hannah Hatherell</title>
+  <title>HH | Testimonials</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
