hhi page updates

--- a/hhi.html
+++ b/hhi.html
@@ -11,7 +11,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>HH | Half Halt Illustrations</title>
+  <title>Half Halt Illustrations</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -92,11 +92,10 @@
 
     <div class="container pt-0 center">
       <div class="row pt-0">
-        <div class="col-sm-6 pt-5 pb-3">
-          <img class="img-fluid" src="img/halfhalt/hhi-logos-1.png">
-        </div>
-        <div class="col-sm-6 pt-5 pb-3">
-          <img class="img-fluid" src="img/halfhalt/hhi-logos-2.png">
+        <div class="pt-5 pb-3">
+          <img class="img-fluid pb-5" src="img/halfhalt/lise.jpg">
+          <img class="img-fluid pb-5" src="img/halfhalt/lwa.jpg">
+          <img class="img-fluid pb-5" src="img/halfhalt/btf.jpg">
         </div>
         <div class="col-sm-6">
           <img class="img-fluid" src="img/halfhalt/hhi-1.jpg">
