--- a/bonfire.html
+++ b/bonfire.html
@@ -153,7 +153,7 @@
         <div class="text-center pt-3">
           <img class="img-fluid" src="img/euna/sops-4.png">
         </div>
-        <p class="pt-2 text-center caption">Digital advertisements and organic social posts.</p>
+        <p class="pt-2 text-center caption">Digital advertisements and paid social.</p>
       </div>
     </div>
   </section>
