--- a/csp.html
+++ b/csp.html
@@ -112,10 +112,10 @@
         <p style="font-weight: 600;">My key contributions to Canadian Science Publishing:</p>
         <ul>
           <li class="pb-3"><span class="font-weight-bold">Led scientific journal cover selection and production.</span> Communication with scientific publishing and managing editors was key in this process.</li>
-          <li class="pb-3"><span class="font-weight-bold">Implemented a design & system process.</span> This established structure and helped Operations and Sales understand why the team chose to implement certain components.</li>
-          <li class="pb-3"><span class="font-weight-bold">Initiated usability testing of sales and marketing tools.</span> We conducted user testing and integrated the feedback to either improve or replace current tools.</li>
+          <li class="pb-3"><span class="font-weight-bold">Improved design process.</span> Creating brand templates made the process with sales, journal editors and marketing more efficient.</li>
+          <li class="pb-3"><span class="font-weight-bold">Initiated usability testing of sales and marketing tools.</span> Conducted in-house user testing of current tools to either improve or replace current tools.</li>
           <li class="pb-3"><span class="font-weight-bold">Implemented tools with built-in metrics.</span> This gave the team a way to measure success, report quantitative data, and inform data-driven decisions.</li>
-          <li class="pb-3"><span class="font-weight-bold">Improved brand and visual presence across all channels.</span> There was little to no brand presence when I came on board, librarians and agents have become more aware of CSP since starting promotional campaigns.</li>
+          <li class="pb-3"><span class="font-weight-bold">Improved brand and visual presence across all channels.</span> Brought design consistency and awareness to the brand. Librarians and agents have increased recognition of CSP since starting promotional campaigns.</li>
         </ul>
       <!--<div>
         <p>When I joined CSP, there was no solution in place for marketing to measure performance metrics of sales-specific campaigns. As a result, there was no way for marketing to know if these campaigns were successful. This caused a gap between marketing and sales because marketing could not report on current and past campaigns or inform future campaigns using quantitative data. It also meant that marketing could not support sales to its fullest extent.</p>
