replaced all instance of home.html with index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Shaping delightful user experiences and storytelling visuals." />
-  <meta property="og:url" content="https://www.hannahhatherell.com/home.html" />
+  <meta property="og:url" content="https://www.hannahhatherell.com/index.html" />
   <meta property="og:image" content="https://www.hannahhatherell.com/img/projects/thumbs/home.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -50,11 +50,11 @@
           aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand js-scroll-trigger" href="home.html"></a>
+        <a class="navbar-brand js-scroll-trigger" href="index.html"></a>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav">
             <li class="dropdown-toggle nav-link">
-              <a href="home.html" style="padding-right: 0; text-decoration: none;" class="work">Work</a>
+              <a href="index.html" style="padding-right: 0; text-decoration: none;" class="work">Work</a>
                 <ul class="dropdown-menu nav-item hide-992">
                     <li><a class="dropdown-item nav-item" href="igloo.html">Igloo Software</a></li>
                     <li><a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a></li>
