--- a/euna.html
+++ b/euna.html
@@ -51,7 +51,7 @@
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand js-scroll-trigger" href="home.html"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"></a>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="dropdown-toggle nav-link">
