--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
           aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand js-scroll-trigger" href="home.html"></a>
+        <a class="navbar-brand js-scroll-trigger" href="index.html"></a>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav">
             <li class="dropdown-toggle nav-link">
